main.tf
# -----------------------------
# VPC
# -----------------------------

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.name}-vpc"
  }
}


# -----------------------------
# Public Subnet
# -----------------------------

resource "aws_subnet" "public" {
  vpc_id = aws_vpc.main.id

  cidr_block = var.public_subnet_cidr

  availability_zone = var.availability_zone

  map_public_ip_on_launch = true

  tags = {
    Name = "${var.name}-public-subnet"
  }
}


# -----------------------------
# Internet Gateway
# -----------------------------

resource "aws_internet_gateway" "main" {

  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.name}-igw"
  }
}


# -----------------------------
# Route Table
# -----------------------------

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id
  }


  tags = {
    Name = "${var.name}-public-route-table"
  }
}


# -----------------------------
# Route Table Association
# -----------------------------

resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id
}


# -----------------------------
# Security Group
# -----------------------------

resource "aws_security_group" "web" {

  name = "${var.name}-security-group"

  description = "Allow SSH and HTTP"

  vpc_id = aws_vpc.main.id


  ingress {

    description = "SSH"

    from_port = 22

    to_port = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }


  ingress {

    description = "HTTP"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {

    Name = "${var.name}-sg"

  }

}


# -----------------------------
# EC2 Instance
# -----------------------------

resource "aws_instance" "web" {


  ami = var.ami_id


  instance_type = var.instance_type


  subnet_id = aws_subnet.public.id


  vpc_security_group_ids = [
    aws_security_group.web.id
  ]


  user_data = file("user_data.sh")


  associate_public_ip_address = true


  tags = {

    Name = "${var.name}-server"

  }

}
